# pro_U_loc

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/pro_u_loc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/layout/: activity_main.xml  activity_sign.xml  activity_user.xml  content_activity_user.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
login-server/: build.gradle
login-server/src/main/: AndroidManifest.xml
login-server/src/main/cpp/: CMakeLists.txt  native_lib.cpp
login-server/src/main/res/layout/: activity_add_friend.xml  activity_invite.xml  activity_main.xml  activity_sign.xml  activity_splash.xml  activity_user.xml  activity_user_noti.xml  item_invite.xml  listview_item.xml
login-server/src/main/res/menu/: user_menu.xml
login-server/src/main/res/values/: strings.xml  styles.xml
socket_test/: build.gradle
socket_test/src/main/: AndroidManifest.xml
socket_test/src/main/assets/: GPSmessage.txt
socket_test/src/main/res/layout/: activity_main.xml  activity_main2.xml  activity_main3.xml  activity_splash.xml  listview_item.xml
socket_test/src/main/res/menu/: menu_main.xml
socket_test/src/main/res/values/: strings.xml
testbignum/: build.gradle
testbignum/src/main/: AndroidManifest.xml
testbignum/src/main/cpp/: CMakeLists.txt  native_lib.cpp
testbignum/src/main/res/layout/: activity_main.xml
testbignum/src/main/res/values/: strings.xml
(+79 files in other folders)
